# mistral-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  e2e-manual.yml  generate-client.yml
scripts/: generate_client.sh
tests/: conftest.py
tests/e2e/: __init__.py  test_chat.py  test_embeddings.py  test_models.py
